fix gallows blocking controls and set invisible on input focus on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,6 +209,7 @@ button {
 .hangman-gallows-container {
   position: absolute;
   width: 320px;
+  z-index: -1;
 }
 
 .invisible {
